# runner

./: .gitignore  AndroidManifest.xml  LICENSE  README  build.sh  build.xml  check_crash.sh  fix.sh  pack.sh
assets/: w01d01.runner
assets/materials/: crate.material  level.material  skybox.material
assets/models/: bullsquid.model  crate.model  level.octree  scientist.model
assets/original/shaders/: bbox.vs  button.ps  button.vs  crate.ps
assets/original/textures/: Makefile
assets/original/textures/tools/: converter
assets/shaders/: bbox.ps  button.ps  crate.ps  crate.vs  level.ps  level.vs  obj.ps  obj.vs  skybox.ps  test.vs
assets/textures/: skybox.texture
assets/textures/atc/: grass06.texture
assets/textures/etc/: buttons.texture
assets/textures/etc1/: barrel_rusty01.texture  crate01.texture
assets/textures/s3tc/: barrel_rusty01.texture  grass06.texture
engine/: Android.mk  CMakeLists.txt  bbox.c  bbox.h  camera.h  common.c  common.h  frustum.h  game.c  game.h  gl_defs.c  gl_defs.h  gui.c  gui.h  image.c  image.h  logging.h  mathlib.h  quaternion.c  resman.c  resman.h  shader.c  shader.h  stream.h  stream_android.c  stream_fs.c  tex2d.c  tex2d.h  timestamp.c  timestamp.h  vector.c  world.c  world.h
jni/: Android.mk  Application.mk
jni/libbullet/: Android.mk  Bullet-C-Api.h
jni/libbullet/BulletDynamics/Dynamics/: Bullet-C-API.cpp
jni/libpng/: Android.mk  png.c  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
jni/librunner/: Android.mk  Makefile  bbox.c  bbox.h  camera.c  camera.h  common.c  common.h  entity.c  entity.h  frustum.c  frustum.h  game.c  game.h  gl.c  gl.h  gui.c  gui.h  hlmdl.c  hlmdl.h  image.c  image.h  material.c  material.h  mathlib.h  matrix.c  matrix.h  model.c  model.h  obj.c  obj.h  octree.c  octree.h  physent.c  physent.h  physworld.c  physworld.h  resman.c  resman.h  shader.c  (+10 more)
jni/libzip/: mkstemp.c  zip_add.c  zip_add_dir.c  zip_close.c  zip_delete.c  zip_dirent.c  zip_entry_free.c  zip_entry_new.c  zip_err_str.c  zip_error.c  zip_error_clear.c  zip_error_get.c  zip_error_get_sys_type.c  zip_error_strerror.c  zip_error_to_str.c  zip_fclose.c  zip_file_error_clear.c  zip_file_error_get.c  zip_file_get_offset.c  zip_file_strerror.c  zip_filerange_crc.c  zip_fopen.c  zip_fopen_index.c  zip_fread.c  zip_free.c  zip_get_archive_comment.c  zip_get_archive_flag.c  zip_get_file_comment.c  zip_get_name.c  zip_get_num_files.c  zip_memdup.c  zip_name_locate.c  zip_new.c  zip_open.c  zip_rename.c  zip_replace.c  zip_set_archive_comment.c  zip_set_archive_flag.c  zip_set_file_comment.c  zip_set_name.c  (+14 more)
jni/physics/: Android.mk  bullet_wrapper.cpp
jni/runner/: Android.mk  assets.c  assets.h  bbox.c  bbox.h  camera.c  common.h  frustum.c  frustum.h  gl.c  gl.h  hlmdl.c  hlmdl.h  make_header.sh  matrix.c  matrix.h  mesh.c  mesh.h  model.c  model.h  obj.c  octree.c  octree.h  resman.c  runner.c  runner.h  shader.c  shader.h  stream.c  stream.h  tex2d.c  tex2d.h  ua_org_asqz_runner_Wrapper.h  vector.c  vector.h  wrapper.c
jni/utils/: Makefile.convert_dds  Makefile.convert_pvr  Makefile.converter  Makefile.texture_dump  Makefile.world_dump  convert_dds.c  convert_etc1.py  convert_pvr.c  convert_pvr.cpp  converter.c  io_export_runner.py  world_dump.c
jni/utils/converters/: dds.c  pvr.h
jni/wrapper/: Android.mk  make_header.sh  runner.c  runner.h  ua_org_asqz_runner_Wrapper.h  wrapper.c
physics/: Android.mk  CMakeLists.txt  bullet_wrapper.cpp  physics.h
runner/: CMakeLists.txt
runner/android/: Makefile  build.xml
runner/android/assets/: w01d01.runner
runner/android/assets/levels/: w01d01.runner
runner/android/assets/shaders/: bbox.shader  button.shader  crate.shader  level.shader  physics.shader  skybox.shader  skybox.vs
runner/android/assets/textures/atc/: barrel_rusty01.texture  buttons.texture  crate01.texture  grass06.texture  skybox.texture
runner/android/assets/textures/etc/: barrel_rusty01.texture  crate01.texture  grass06.texture  skybox.texture
runner/android/assets/textures/pvrtc/: barrel_rusty01.texture  buttons.texture  crate01.texture  grass06.texture  skybox.texture
runner/android/assets/textures/s3tc/: barrel_rusty01.texture  buttons.texture  crate01.texture  grass06.texture  skybox.texture
runner/android/jni/: Android.mk
runner/android/jni/wrapper/: Android.mk  make_header.sh  ua_org_asqz_runner_Wrapper.h  wrapper.c
runner/android/res/layout/: main.xml
runner/android/src/ua/org/asqz/runner/: Key.java  MainActivity.java  RunnerSurfaceView.java  Wrapper.java
runner/assets/: CMakeLists.txt
runner/assets/levels/: CMakeLists.txt  barrel.blend  button.blend  common.blend  crate.blend  gui.blend  w01d01.blend
runner/assets/shaders/: CMakeLists.txt  bbox.shader  button.shader  crate.shader  level.shader  level.vs  physics.ps  physics.shader  physics.vs  skybox.shader
runner/assets/textures/: CMakeLists.txt
runner/linux/: CMakeLists.txt  config.h.in  crash_handler.c  crash_handler.h  main.c
runner/shared/: Android.mk  CMakeLists.txt  keys.h  runner.c  runner.h
src/ua/org/asqz/runner/: MainActivity.java  RunnerRenderer.java  RunnerSurfaceView.java  Wrapper.java
tools/: CMakeLists.txt  converter.c  export_level.py  io_export_runner.py  texture_dump.c
tools/converters/: dds.c  dds.h  pvr.c  shader.c  shader.h
